--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
+    "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
